# Heart-Rate-Variability-Monitoring-System

./: README.md
HeartWave/: CMakeLists.txt  batteryindicator.cpp  breathpacer.cpp  enums.h  heartrategraph.cpp  heartrateindicator.h  initsessionview.cpp  logview.cpp  logview.h  main.cpp  mainmenuview.cpp  mainmenuview.h  mainwindow.cpp  mainwindow.ui  navigationbar.cpp  navigationbar.h  newsessionview.h  plotter.cpp  plotter.h  screen.cpp  screencontextmanager.h  summaryview.h
HeartWave/Header Files/: batteryindicator.h  breathmeter.h  breathpacer.h  clabar.h  coherencebar.h  coherencecalculator.h  deviceconfig.h  heartrategraph.h  initsessionview.h  mainwindow.h  navigationpad.h  screen.h  settingsconfig.h  settingsview.h
HeartWave/Source Files/: breathmeter.cpp  clabar.cpp  coherencebar.cpp  coherencecalculator.cpp  deviceconfig.cpp  heartrateindicator.cpp  navigationpad.cpp  newsessionview.cpp  screencontextmanager.cpp  settingsconfig.cpp  settingsview.cpp  summaryview.cpp
